# SIDE

./: build.rs  readme.md  version-plan.md
ide/: Cargo.toml  version-plan.md
ide/src/: main.rs  syntax.rs
ide/syntax/: arnoldc.sidel  befunge93.sidel  befunge98.sidel  brainfuck.sidel  c.sidel  chef.sidel  cpp.sidel  holyc.sidel  intercal.sidel  lolcode.sidel  manifest.toml  ook.sidel  pygyat.sidel  python.sidel  rust.sidel  sidel.sidel  toml.sidel  unlambda.sidel
