[package]
name = "ide"
version = "0.3.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.7.2", features = ["desktop"] }
dioxus-desktop = "0.7.2"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
semver = "1"
tokio = { version = "1", features = ["time"] }
rfd = "0.17.1"
serde = "1.0.228"
toml = "0.9.10"

